Resolves: tdf#115106 don't assume fullscreen is impress

writer can too, so revert this part of

commit 277395b6266c57a7709c3c47986f135f6789c8e7
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Jun 13 18:09:08 2017 +0100

    make opengl transitions under X flicker free on enter/leave

which should restore matters to its former glory, at this point gtk3 opengl
transition support now works so it all moot to me now.

Change-Id: I78a8a774aead6482d0541575dbf10ad977ceccc0
Reviewed-on: https://gerrit.libreoffice.org/48207
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>